Beta version 1.2: added switching language and header

--- a/src/styles/Registration/registration.scss
+++ b/src/styles/Registration/registration.scss
@@ -116,6 +116,7 @@ html::-webkit-scrollbar {
         & p {
             font-weight: 200;
             font-size: calc(var(--index));
+            width: 70%;
 
             & a {
                 font-style: italic;
